--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="THE 1ST ANNIVERSARY OF F.I.T - LOGO DESIGN AND ART CONTEST">
-    <meta name="keywords" content="Dịp để các sinh viên Khoa Công nghệ thông tin thể hiện các tài năng văn nghệ: hát, nhảy, múa giao lưu văn nghệ với nhau và bổ sung vào đội văn nghệ chuyên nghiệp của Khoa Công nghệ thông tin. Tìm kiếm nhà thiết kế logo Khoa Công nghệ thông tin năm học 2019-2020.">
+    <meta name="description" content="Dịp để các sinh viên Khoa Công nghệ thông tin thể hiện các tài năng văn nghệ: hát, nhảy, múa giao lưu văn nghệ với nhau và bổ sung vào đội văn nghệ chuyên nghiệp của Khoa Công nghệ thông tin. Tìm kiếm nhà thiết kế logo Khoa Công nghệ thông tin năm học 2019-2020.">
+    <meta name="keywords" content="LOGO DESIGN AND ART CONTEST, THE 1ST ANNIVERSARY OF F.I.T">
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="https://ituef.github.io/scientific-seminar/favicon.ico" type="image/x-icon">
     <!-- ========== Title ========== -->
-    <title>THE 1ST ANNIVERSARY OF F.I.T - LOGO DESIGN AND ART CONTEST</title>
+    <title>LOGO DESIGN AND ART CONTEST - THE 1ST ANNIVERSARY OF F.I.T</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/et-line.css" rel="stylesheet">
