--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="loader-inner"></div>
     </div>
     <!--cover section slider -->
-    <section id="home" class="home-cover">
+    <section id="home" class="home-cover" style="margin-top:-150px">
         <div class="cover_slider owl-carousel owl-theme" id="Desktop">
-            <div class="cover_item" id="SL1" style="background: url('assets/img/hinh/bg.png');">
+            <div class="cover_item" id="SL1">
+				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
             </div>
-            <div class="cover_item" id="SL2" style="background: url('assets/img/hinh/bg.png');">
+            
             </div>
         </div>
         <div class="cover_slider owl-carousel owl-theme" id="Mobile">
-            <div class="cover_item" id="SL1" style="background: url('assets/img/hinh/st.png');">
-            </div>
-            <div class="cover_item" id="SL2" style="background: url('assets/img/hinh/st.png');">
+             <div class="cover_item" id="SL1">
+				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
             </div>
         </div>
         <div class="cover_nav">
