--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
             <div class="cover_item" id="SL1">
 				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
             </div>
-            
+            <div class="cover_item" id="SL2">
+				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            </div>
             </div>
         </div>
         <div class="cover_slider owl-carousel owl-theme" id="Mobile">
              <div class="cover_item" id="SL1">
+				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            </div>
+			<div class="cover_item" id="SL2">
 				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
             </div>
         </div>
