--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Dịp để các sinh viên Khoa Công nghệ thông tin thể hiện các tài năng văn nghệ: hát, nhảy, múa giao lưu văn nghệ với nhau và bổ sung vào đội văn nghệ chuyên nghiệp của Khoa Công nghệ thông tin. Tìm kiếm nhà thiết kế logo Khoa Công nghệ thông tin năm học 2019-2020.">
-    <meta name="keywords" content="LOGO DESIGN AND ART CONTEST, THE 1ST ANNIVERSARY OF F.I.T">
+    <meta name="description" content="THE 1ST ANNIVERSARY OF F.I.T - LOGO DESIGN AND ART CONTEST">
+    <meta name="keywords" content="Dịp để các sinh viên Khoa Công nghệ thông tin thể hiện các tài năng văn nghệ: hát, nhảy, múa giao lưu văn nghệ với nhau và bổ sung vào đội văn nghệ chuyên nghiệp của Khoa Công nghệ thông tin. Tìm kiếm nhà thiết kế logo Khoa Công nghệ thông tin năm học 2019-2020.">
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="https://ituef.github.io/scientific-seminar/favicon.ico" type="image/x-icon">
     <!-- ========== Title ========== -->
-    <title>LOGO DESIGN AND ART CONTEST - THE 1ST ANNIVERSARY OF F.I.T</title>
+    <title>THE 1ST ANNIVERSARY OF F.I.T - LOGO DESIGN AND ART CONTEST</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/et-line.css" rel="stylesheet">
@@ -29,21 +29,17 @@
         <div class="loader-inner"></div>
     </div>
     <!--cover section slider -->
-    <section id="home" class="home-cover" style="margin-top:-150px">
+    <section id="home" class="home-cover">
         <div class="cover_slider owl-carousel owl-theme" id="Desktop">
-            <div class="cover_item" id="SL1">
-				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            <div class="cover_item" id="SL1" style="background: url('assets/img/bg/bd.jpg');">
             </div>
-              <div class="cover_item" id="SL2">
-				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            <div class="cover_item" id="SL2" style="background: url('assets/img/bg/bd.jpg');">
             </div>
         </div>
         <div class="cover_slider owl-carousel owl-theme" id="Mobile">
-             <div class="cover_item" id="SL1">
-				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            <div class="cover_item" id="SL1" style="background: url('assets/img/bg/st.jpg');">
             </div>
-		 <div class="cover_item" id="SL2">
-				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
+            <div class="cover_item" id="SL2" style="background: url('assets/img/bg/st.jpg');">
             </div>
         </div>
         <div class="cover_nav">
@@ -400,12 +396,12 @@
                             <div class="form-group">
                                 <select class="form-control" style="height:60px" name="typeId" required>
                                     <option value="0">--- CHỌN NỘI DUNG THI ---</option>
-                                    <option value="1">VĂN NGHỆ - HÁT (ĐƠN CA)</option>
-                                    <option value="2">VĂN NGHỆ - HÁT (SONG CA)</option>
-                                    <option value="3">VĂN NGHỆ - HÁT (TỐP CA)</option>
-                                    <option value="4">VĂN NGHỆ - NHẢY</option>
-                                    <option value="5">VĂN NGHỆ - MÚA</option>
-                                    <option value="6">THIẾT KẾ LOGO</option>
+                                    <option value="HÁT ĐƠN CA">VĂN NGHỆ - HÁT (ĐƠN CA)</option>
+                                    <option value="HÁT SONG CA">VĂN NGHỆ - HÁT (SONG CA)</option>
+                                    <option value="HÁT TỐP CA">VĂN NGHỆ - HÁT (TỐP CA)</option>
+                                    <option value="NHẢY">VĂN NGHỆ - NHẢY</option>
+                                    <option value="MÚA">VĂN NGHỆ - MÚA</option>
+                                    <option value="THIẾT KẾ LOGO">THIẾT KẾ LOGO</option>
                                 </select>
                             </div>
                             <label class="label">HỌ VÀ TÊN SINH VIÊN</label>
@@ -428,32 +424,32 @@
                             <div class="form-group">
                                 <select class="form-control" style="height:60px" name="txtLop" required>
                                     <option value="-4">--- CHỌN LỚP ---</option>
-                                    <option value="-3">16D1TH01</option>
-                                    <option value="-2">16D1TM01</option>
-                                    <option value="-1">17D1TH01</option>
-                                    <option value="0">17D1TM01</option>
-                                    <option value="1">18D1TM01</option>
-                                    <option value="2">18D1TM02</option>
-                                    <option value="3">18D1TM03</option>
-                                    <option value="4">18D1TM04</option>
-                                    <option value="5">18D1TM05</option>
-                                    <option value="6">18D1TM06</option>
-                                    <option value="7">18D1TH01</option>
-                                    <option value="8">18D1TH02</option>
-                                    <option value="9">18D1TH03</option>
-                                    <option value="10">18D1TH04</option>
-                                    <option value="12">18D1TH05</option>
-                                    <option value="12">18D1TH06</option>
-                                    <option value="13">18D1TH07</option>
-                                    <option value="14">18D1TH08</option>
-                                    <option value="15">19D1TH01</option>
-                                    <option value="16">19D1TH02</option>
-                                    <option value="17">19D1TH03</option>
-                                    <option value="18">19D1TH04</option>
-                                    <option value="19">19D1TM01</option>
-                                    <option value="20">19D1TM02</option>
-                                    <option value="21">19D1TM03</option>
-                                    <option value="22">19D1TM04</option>
+                                    <option value="16D1TH01">16D1TH01</option>
+                                    <option value="16D1TM01">16D1TM01</option>
+                                    <option value="17D1TH01">17D1TH01</option>
+                                    <option value="17D1TM01">17D1TM01</option>
+                                    <option value="18D1TM01">18D1TM01</option>
+                                    <option value="18D1TM02">18D1TM02</option>
+                                    <option value="18D1TM03">18D1TM03</option>
+                                    <option value="18D1TM04">18D1TM04</option>
+                                    <option value="18D1TM05">18D1TM05</option>
+                                    <option value="18D1TM06">18D1TM06</option>
+                                    <option value="18D1TH01">18D1TH01</option>
+                                    <option value="18D1TH02">18D1TH02</option>
+                                    <option value="18D1TH03">18D1TH03</option>
+                                    <option value="18D1TH04">18D1TH04</option>
+                                    <option value="18D1TH05">18D1TH05</option>
+                                    <option value="18D1TH06">18D1TH06</option>
+                                    <option value="18D1TH07">18D1TH07</option>
+                                    <option value="18D1TH08">18D1TH08</option>
+                                    <option value="19D1TH01">19D1TH01</option>
+                                    <option value="19D1TH02">19D1TH02</option>
+                                    <option value="19D1TH03">19D1TH03</option>
+                                    <option value="19D1TH04">19D1TH04</option>
+                                    <option value="19D1TM01">19D1TM01</option>
+                                    <option value="19D1TM02">19D1TM02</option>
+                                    <option value="19D1TM03">19D1TM03</option>
+                                    <option value="19D1TM04">19D1TM04</option>
                                 </select>
                             </div>
                             <div class="form-group text-right">
