--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     <!--cover section slider -->
     <section id="home" class="home-cover">
         <div class="cover_slider owl-carousel owl-theme" id="Desktop">
-            <div class="cover_item" id="SL1" style="background: url('assets/img/bg/bd.jpg');">
+            <div class="cover_item" id="SL1" style="background: url('assets/img/hinh/bg.jpg');">
             </div>
-            <div class="cover_item" id="SL2" style="background: url('assets/img/bg/bd.jpg');">
+            <div class="cover_item" id="SL2" style="background: url('assets/img/hinh/bg.jpg');">
             </div>
         </div>
         <div class="cover_slider owl-carousel owl-theme" id="Mobile">
-            <div class="cover_item" id="SL1" style="background: url('assets/img/bg/st.jpg');">
+            <div class="cover_item" id="SL1" style="background: url('assets/img/hinh/bg.jpg');">
             </div>
-            <div class="cover_item" id="SL2" style="background: url('assets/img/bg/st.jpg');">
+            <div class="cover_item" id="SL2" style="background: url('assets/img/hinh/bg.jpg');">
             </div>
         </div>
         <div class="cover_nav">
