--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="loader-inner"></div>
     </div>
     <!--cover section slider -->
-    <section id="home" class="home-cover">
+    <section id="home" class="home-cover" style="margin-top:-150px !important;">
         <div class="cover_slider owl-carousel owl-theme" id="Desktop">
             <div class="cover_item" id="SL1">
 				<img src="assets/img/hinh/bg.png"  style="width:100%"/>
